2005-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/tiff/read.t: Added test for reading truecolor
	planar TIFF image.
	Added test for reading 32-bit TrueColor TIFF image.
	Added test for reading 32-bit grayscale TIFF image.
	* coders/tiff.c (ReadTIFFImage): Fixed stripped TIFF reader.

2005-01-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Only set TIFFTAG_PREDICTOR to 2
	for bits-per-sample values that libtiff supports.

2004-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (DescribeImage): Add normalized channel statistics
	to output.
	* NEWS: Updated with changes since July.
	* magick/constitute.c (ImportImagePixelArea): For GrayQuantum,
	GrayInvertedQuantum, GrayAlphaQuantum, and
	GrayInvertedAlphaQuantum, observe image storage_class so that a
	gray DirectClass image may be created.
	* coders/tiff.c (ReadTIFFImage): Fix overflow when computing
	colormap size for bits-per-sample of 32.
	(WriteTIFFImage): Support writing 32-bit RGB(A) for
	QuantumDepth=32 build.
	(ReadTIFFImage): Support reading 32-bit RGB(A) for QuantumDepth=32
	build.  Support reading 32-bit grayscale without any quality loss
	for QuantumDepth=32 build.

2004-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): TrueColor 16-bits/sample RGB
	images were being written incorrectly on little-endian CPUs.
	Added byte swapping to fix this problem.

2004-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.c: New file for quantum operator implementation.
	(QuantumOperatorImage): Moved from image.c.
	(QuantumOperatorRegionImage): Moved from from image.c.

2004-12-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* magick/Makefile.am (MAGICK_BASE_SRCS): Remove mention of
	non-existent mmath.h.
	* configure.ac: AC_LIBTOOL_SETUP is an internal macro and must not
	be used externally (will be pulled in automatically).