@@ -10,8 +10,8 @@ UNIX/Cygwin/MinGW COMPILATION
 
   Type:
 
-    gzip -dc GraphicsMagick-1.1.tar.gz | tar xvf -
-    cd GraphicsMagick-1.1
+    gzip -dc GraphicsMagick-1.2.tar.gz | tar xvf -
+    cd GraphicsMagick-1.2
 
   If you do not have gzip(1), the source for the gzip package is
   available as a shell archive at
@@ -26,7 +26,7 @@ UNIX/Cygwin/MinGW COMPILATION
   GraphicsMagick. The configure script may be executed from the
   GraphicsMagick source directory (e.g ./configure) or from a seperate
   build directory by specifying the full path to configure (e.g.
-  /src/GraphicsMagick-1.1/configure). The advantage of using a seperate
+  /src/GraphicsMagick-1.2/configure). The advantage of using a seperate
   build directory is that multiple GraphicsMagick builds may share the
   same GraphicsMagick source directory while allowing each build to use a
   unique set of options.
