@@ -24,6 +24,9 @@
 2005-01-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> coders/jp2.c (ReadJP2Image): Handle images in YCBCR colorspace.
+        (ReadJP2Image): Retrieve and store an ICC ICM color profile if
+        present.<BR>
   <LI> PerlMagick/t/tiff/read.t: Added test for reading truecolor
         planar TIFF image.<BR>
         Added test for reading 32-bit TrueColor TIFF image.
